--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,12 +9,15 @@ on:
 jobs:
     build:
       runs-on: ubuntu-latest
-      # Here we install all the tools : docker buildx, QEMU, JDK 11, JFrog CLI
+      # This is required for requesting the Github JWT token from the OIDC provide inside this job
+      permissions:
+        id-token: write 
+      # Here we install all the tools needed : Vault CLI and  JFrog CLI
       steps:
         - name: Checkout
           uses: actions/checkout@v3
         - name: Setup JFrog CLI
           uses: jfrog/setup-jfrog-cli@v3
-        - name: Run Maven WAR build 
+        - name: Run token demo
           run: |
             jf --help
