--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,10 +2,10 @@ name: "github-oidc-demo"
 on: 
   workflow_dispatch:
     inputs:
-      vault-address:
+      vault-endpoint:
         required: true
         type: string
-        description: Public IP to reach the hashicorp vault
+        description: Hashicorp vault endpoint
 jobs:
     build:
       runs-on: ubuntu-latest
@@ -18,6 +18,17 @@ jobs:
           uses: actions/checkout@v3
         - name: Setup JFrog CLI
           uses: jfrog/setup-jfrog-cli@v3
+        - name: Retrieve secret from Vault
+          uses: hashicorp/vault-action@v2
+            with:
+              method: jwt
+              url: ${{ github.event.inputs.vault-endpoint }}
+              role: gh-vault-jfrog-demo
+              secrets: |
+                kv-v2/hello foo | DEMO_TOKEN
+        - name: Use secret from Vault
+          run: |
+            echo $DEMO_TOKEN
         - name: Run token demo
           run: |
             jf --help
