add a sample dl using the permissions from the access token

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,5 +35,4 @@ jobs:
             JFROG_URL: ${{ github.event.inputs.jfrog-endpoint }}
           run: |
             jf c add --url=$JFROG_URL --access-token=$JFROG_ACCESS_TOKEN
-            jf rt ping
-            
+            jf rt dl dro-misc-assets-local/MultiSite.pdf
